/*
 * Copyright 2021, TeamDev. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
syntax = "proto3";

package spine.tools.column;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.tools.column";
option java_outer_classname = "ProjectViewProto";
option java_multiple_files = true;

message ProjectView {
    option (entity).kind = PROJECTION;

    ProjectId id = 1;

    ProjectName project_name = 2 [(.column) = true];

    Project.Status status = 3 [(.column) = true];

    UserView assignee = 4;
}

message ProjectCreation {
    option (entity).kind = PROCESS_MANAGER;

    ProjectId id = 1;

    ProjectName project_name = 2 [(.column) = true];

    UserView assignee = 3;

    Project parent_project = 4;
}

message Project {
    option (entity).kind = AGGREGATE;

    ProjectId id = 1;

    ProjectName project_name = 2 [(.column) = true];

    Status status = 3 [(.column) = true];

    Project parent_project = 4;

    UserId assignee = 5;

    enum Status {
        PS_UNDEFINED = 0;
        CREATED = 1;
        STARTED = 2;
        DONE = 3;
    }
}

message ProjectId {
    string uuid = 1;
}

message ProjectName {
    string value = 1;
}

message UserView {
    option (entity).kind = PROJECTION;

    UserId id = 1;
    UserName name = 2 [(.column) = true];
}

message UserId {
    string uuid = 1;
}

message UserName {
    string value = 1;
}
